@@ -1,6 +1,9 @@
 2010-03-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* MacOS X: App bundles now use CoreFoundation API to detect resource path
 	  instead of it being hard-coded into the application.
+	* Fixed bugs:
+	  #2962438 The BG and SI credits use the wrong palette
+	  #2961649 Party flickers when walking and infravision or invisible
 
 2010-03-04 Ryan Nunn <colourles@users.sourceforge.net>
 	* msvcstuff/msvc_kludges.h: Updating to reflect current code
